k8/peercode-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peercode-kafka
  labels:
    app: peercode-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peercode-kafka
  template:
    metadata:
      labels:
        app: peercode-kafka
    spec:
      containers:
      - name: peercode-kafka
        image: confluentinc/cp-kafka:7.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 9092
        - containerPort: 19092
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: peercode-kafka
  labels:
    app: peercode-kafka
spec:
  type: NodePort
  ports:
  - name: "9092"
    port: 9092
    targetPort: 9092
  - name: "19092"
    port: 19092
    targetPort: 19092
  selector:
    app: peercode-kafka
status:
  loadBalancer: {}
