k8/peercode-match-service.yaml
apiVersion: apps/v1
kind: Deployment
  labels:
    app: peercode-match-service
  name: peercode-match-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peercode-match-service
  template:
      labels:
        io.kompose.network/network: "true"
        app: peercode-match-service
    spec:
      containers:
      - name: peercode-match-service
        image: public.ecr.aws/a6n0p1z7/g55-peercode:${SHA}-peercode-match-service
        imagePullPolicy: Always
        ports:
        - containerPort: 5002
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
---
apiVersion: v1
kind: Service
  labels:
    app: peercode-match-service
  name: peercode-match-service
spec:
  type: LoadBalancer
  ports:
  - name: "5002"
    port: 5002
    targetPort: 5002
  selector:
    app: peercode-match-service
status:
