k8/peercode-question-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: peercode-question-service
  name: peercode-question-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peercode-question-service
  template:
    metadata:
      labels:
        io.kompose.network/network: "true"
        app: peercode-question-service
    spec:
      containers:
      - name: peercode-question-service
        image: public.ecr.aws/a6n0p1z7/g55-peercode:latest-peercode-question-service
        imagePullPolicy: Always
        ports:
        - containerPort: 5001
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: peercode-question-service
  name: peercode-question-service
spec:
  ports:
  - name: "5001"
    port: 5001
    targetPort: 5001
  selector:
    app: peercode-question-service
status:
