k8/peercode-react.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peercode-react
  labels:
    app: peercode-react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peercode-react
  template:
    metadata:
      labels:
        app: peercode-react
    spec:
      containers:
        - name: peercode-react
          image: public.ecr.aws/a6n0p1z7/g55-peercode:latest-peercode-react
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: peercode-react
spec:
  type: LoadBalancer
  selector:
    app: peercode-react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
