k8/peercode-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: peercode-server
  name: peercode-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peercode-server
  template:
    metadata:
      labels:
        io.kompose.network/network: "true"
        app: peercode-server
    spec:
      containers:
      - name: peercode-server
        image: public.ecr.aws/a6n0p1z7/g55-peercode:latest-peercode-server-service
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: peercode-server
  name: peercode-server
spec:
  type: LoadBalancer
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
  selector:
    app: peercode-server
