k8/peercode-zookeeper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: peercode-zookeeper
  name: peercode-zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peercode-zookeeper
  template:
    metadata:
      labels:
        io.kompose.network/network: "true"
        app: peercode-zookeeper
    spec:
      containers:
      - name: peercode-zookeeper
        image: confluentinc/cp-zookeeper:7.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: peercode-zookeeper
  labels:
    app: peercode-zookeeper
spec:
  type: NodePort
  ports:
  - name: "2181"
    port: 2181
    targetPort: 2181
  selector:
    app: peercode-zookeeper
